# snippets

./: .gitignore  LICENSE
bash/: for-in-range  get-caller  remove-file-prefix  split-variable  strings-comparison
cpp/: strong_password_generator.cpp  weak_password_generator.cpp
emacs-locals/: go-format-all.el
golang/: .dir-locals.el  go.mod  heap.go  randomstr.go  shortpath_test.go  silenceslog.go  suffix_filter_test.go
python/: .dir-locals.el  .flake8  Makefile  check_flags.py  decorator_template.py  hvt_checker_msr.py  latin_alphabet.py  pyproject.toml
python/src/: asyncio_debug.py  channel.py  check_flags.py  decorator_template.py  defaultdict_with_custom_class.py  domain_object.py  hvt_checker_msr.py  latin_alphabet.py  lazy_logging.py  list_init.py  merge_dicts.py  namedtuple_with_custom_class.py  new_types.py  print_traceback.py  result.py  search_spaces.py  sort_default_dict.py  suppress_exeptions.py  to_thread.py
src/bash/: get-caller  get-caller.sh  get-random-port
src/cpp/: CMakeLists.txt  tokenize.cpp  weak_password_generator.cpp
src/js/: date_2w_ago.js  print_object.js
src/python/: .flake8  Makefile  decorator_template.py  hvt_checker_msr.py  list_init.py  measure_execution_time.py  merge_dics.py  merge_dicts.py  namedtuple.py  namedtuple_with_custom_class.py  pointer_to_method.py  pretty_print_json.py  print_traceback.py  pycharm_remote_debug.py  pyproject.toml  search_spaces.py  sort_default_dict.py  suppress_exeptions.py  to_thread.py
vbs/: get-win-version.vbs
