[tool.poetry]
name = "python snipptes"
version = "0.0.1"
description = "Handy snippets for python code."
authors = ["Alexander Kurbatov <sir.alkurbatov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.1"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.2.13"
flake8-simplify = "^0.19.3"
flake8-unused-arguments = "^0.0.13"
isort = "^5.12.0"
mypy = "^1.0.1"
refurb = "^1.15.0"

[tool.black]
line-length = 88

[tool.autopep8]
max_line_length = 88
in-place = true
recursive = true
aggressive = 3
select = ["E203", "W503"]

[tool.isort]
profile = "black"
line_length = 88
wrap_length = 88
multi_line_output = 3
combine_as_imports = true
force_alphabetical_sort_within_sections = true
overwrite_in_place = true

[tool.mypy]
python_version = "3.11"
follow_imports = "normal"
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "humanize.*",
]
ignore_missing_imports = true
