[tool.poetry]
name = "python snipptes"
version = "0.0.1"
description = "Handy snippets for python code."
authors = ["Alexander Kurbatov <sir.alkurbatov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
black = "^24.4"
flake8 = "^7.0"
flake8-annotations-complexity = "^0.0"
flake8-bugbear = "^24.4"
flake8-cognitive-complexity = "^0.1"
flake8-docstrings = "^1.7"
flake8-eradicate = "^1.5"
flake8-pytest-style = "^2.0"
flake8-simplify = "^0.21"
flake8-unused-arguments = "^0.0"
isort = "^5.13"
mypy = "^1.10"
refurb = "^2.0"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
py_version = 312
line_length = 88
wrap_length = 88
multi_line_output = 3
combine_as_imports = true
force_alphabetical_sort_within_sections = true
overwrite_in_place = true

[tool.mypy]
python_version = "3.12"
follow_imports = "normal"
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "humanize.*",
]
ignore_missing_imports = true

[tool.refurb]
python_version = "3.12"